--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ i {
 }
 
 .skill-list {
-  color: #6070ff;
+  color: #0018f0;
   background-color: #ebebff;
   margin: 0 0.5rem 0 0;
   padding: 0.25em 0.75em;
