--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 html {
@@ -50,6 +51,10 @@ header {
 
 .navigation-bar {
   display: none;
+}
+
+.my-logo {
+font-weight: normal;
 }
 
 .my-logo > a {
