--- a/style.css
+++ b/style.css
@@ -15,9 +15,38 @@ ul {
   list-style: none;
 }
 
-/* start mobile-menu */
+.menu-icon {
+  width: 42px;
+  height: 40px;
+  font-size: 24px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
 
-.show-menu {
+body {
+  width: 100%;
+  background-color: #f7f7f9;
+  overflow-x: hidden;
+  position: relative;
+}
+
+/* start mobile-menu */
+.mob-menu-close-icon {
+  color: #fff;
+  align-self: flex-end;
+  padding: 0;
+}
+
+.mob-menu--hide {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+.mobile-menu--show {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -35,56 +64,13 @@ ul {
   backdrop-filter: blur(4px);
 }
 
-.hide-menu {
-  display: none;
-}
-
-.close-btn {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  width: 24px;
-  height: 24px;
-  color: #fff;
-  font-size: 24px;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  align-self: flex-end;
-  padding: 0;
-}
-
-.show-menu > ul > li {
+.mobile-menu--show > ul > li {
   padding: 0.5em 0;
 }
 
-.menu-icon-button {
+.mob-nav-menu-butn {
   display: inline;
   cursor: pointer;
-}
-
-.nav-link:nth-child(even) {
-  margin: 0 0.5em;
-}
-
-/* finish mobile menu */
-
-.menu-icon {
-  width: 42px;
-  height: 40px;
-  font-size: 24px;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-
-body {
-  width: 100%;
-  background-color: #f7f7f9;
-  overflow-x: hidden;
-  position: relative;
 }
 
 .my-heading-large {
