--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 .mobile-menu--show {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   padding: 1em 0.75em;
